--- a/serve/package.json
+++ b/serve/package.json
@@ -11,11 +11,13 @@
     "debug": "~2.6.9",
     "ejs": "^3.0.1",
     "express": "~4.16.1",
+    "formidable": "^1.2.2",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.7.13",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "multer": "^1.4.2"
   }
 }
